styles/styles.css
body {
    background-color: black;
    color: white;
    font-family: sans-serif;
    max-width: 800px;
    margin-inline: auto;
}

header {
    margin-bottom: 50px;
}

.space-Below {
    margin-bottom: 50px;
}

pre {
    background: #333;
    padding: 10px;
    border-radius: 5px;
    overflow-x: auto;
    position: relative;
}

textarea {
    background: #333;
    color: white;
    border-color: #aaa;
}

button {
    padding: 10px 20px;
    border-radius: 10px;
    cursor: pointer;
    border: none;
}

button.copy-btn {
    position: absolute;
    top: 5px;
    right: 5px;
    background: #007bff;
    color: white;
    border: none;
    padding: 5px 10px;
    border-radius: 3px;
}

button.preset-button {
    padding: 10px;
}

button:hover {
    background: #003e80;
}

nav {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    height: 100px;
    /* margin-bottom: 50px; */
    /* background-color: #111; */
    a {
        background-color: #003e80;
        color: white;
        display: flex;
        align-items: center;
        justify-content: center;
        /* padding: 10px; */
        /* flex: 1; */
        /* margin: 0 10px; */
        /* margin-inline: auto; */
        /* align-self: center; */
        border-radius: 5%;
    }
    img {
        object-fit: contain;
        height: auto;
    }
    .selected {
        background-color: red;
    }
}

header hr {
    margin-top: 10px;
    margin-bottom: 50px;
}

pixelart {
    image-rendering: pixelated;
}

.sp4cebar-image {
    background-image: url("/assets/sp4cebar logo 100x100.jpg");
    border-radius: 50%;
    width: 100px;
    height: 100px;
    
    background-repeat: no-repeat;
    background-size: cover;
    /* background-attachment: fixed; */
}
.sp4cebank-image {
    background-image: url("/assets/sp4cebar_memory_bank.png");
    width: 100px;
    height: 100px;
    
    background-repeat: no-repeat;
    background-size: cover;
    image-rendering: pixelated;
    /* background-attachment: fixed; */
    
}

/* .sp4cebank-image.selected {
    background-image: linear-gradient(to right, black, transparent, black), url("/assets/sp4cebar_memory_bank.png"), ;
    background-color: red;
} */

#preset-selector {
    display: grid;
    grid-template-columns: 25% 25% 25% 25%;
    button {
        border-radius: 0;
        margin: 2px;
    }
}

.white {
    background-color: white;
}

p {
    line-height: 1.5em;
}

math {
    margin: 40px 20px;
}

.hidden {
    display: none;
}

.initially-hidden {
    display: none;
}

.circuitLabel {
    font: italic 13px sans-serif;
    fill: white;
    paint-order: stroke;
    stroke: black;
    stroke-width: 5px;
    stroke-linejoin: round;
}

.generator-input-params{
    display: grid;
    grid-template-columns: 60% 40%;
    row-gap: 10px;
}

#codeInput {
    width: 100%;
    border: 0;
    padding: 0;
    resize: vertical;
    min-height:200px;
}

#generate-button {
    width: 90%;
    margin: 10px 5%;
}

hr {
    margin-top: 150px;
    margin-bottom: 30px;
}

.inline {
    display: inline;
}

.blue {
    background-color: #445;
    color: white;
    border-color: black;
}

.red {
    background-color: #544;
    color: white;
    border-color: black;
}

.green {
    background-color: #454;
    color: white;
    border-color: black;
}

.data-type-table {
    /* table { */
        border-spacing: 0; 
        /* Removes any default spacing between cells */
        border-collapse: collapse;
        /* Ensures borders don’t double up */
        width: 100%;
        /* Optional: Makes the table fill the container */
        /* color: red; */
        background-color: #111;
    /* } */

    /* tr {
        border-spacing: 0;
    } */
    
    th, td {
        border-right: 1px solid white;
        padding: 8px;
    }

    th {
        border-bottom: 1px solid white;
    }
    
    /* Remove the border from the last column */
    th:last-child, td:last-child {
        border-right: none;
    }

    .new-table-section * {
        border-top: 1px solid white;
    }
      
    /* td {
        border: solid;
        border-top: 0px;
        border-bottom: 0px;
        border-left: 0px;
    } */
}

.horizontal-scroll {
    overflow: auto;
}

